# molecular-repa

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  test_repa_integration.py
docs/: PROGRESS_LOG.md  devnotes.md  meeting_log.md  notes.md  references.bib
learning/: molecules_3d.sdf  tiny_dataset.pt
playground/: create_tiny_dataset.py  molecules_3d.sdf  test_chemprop_encoder.py  test_repa_integration.py  test_repa_training.ipynb  test_sample.py  visualize_molecules.py
playground/_archive/: create_tiny_dataset.py  visualize_molecules.py
playground/exploration/: benchmark_chemprop_encoder.py  debug_repa_training.ipynb  test_chemprop_encoder.ipynb  test_repa_training.ipynb
playground/tests/: test_chemprop_encoder.py  test_data_pipeline.py  test_repa_integration.py  test_smiles_pipeline.py
scripts/: slurm_geom_chemprop.sh  slurm_geom_chemprop_2gpu.sh  slurm_geom_mild.sh  slurm_geom_mild_2gpu.sh  slurm_qm9_baseline.sh  slurm_qm9_chemprop.sh  slurm_qm9_chemprop_2gpu.sh  slurm_script.sh  train_tabasco.py
scripts/tabasco/: precompute_chemeleon_embeddings.py  train_tabasco.py
scripts/tabasco/geom/: slurm_geom_chemprop.sh  slurm_geom_chemprop_additive.sh  slurm_geom_chemprop_tradeoff.sh  slurm_geom_mild.sh
scripts/tabasco/geom/multi-gpu/: slurm_geom_chemprop_2gpu.sh  slurm_geom_mild_2gpu.sh
scripts/tabasco/qm9/: slurm_qm9_baseline.sh  slurm_qm9_chemprop.sh
scripts/tabasco/qm9/multi-gpu/: slurm_qm9_chemprop_2gpu.sh
src/: main.py  slurm_script.sh
src/learning/: test_molecules.pkl  test_sample.py
