[project]
name = "molecular-repa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax[cpu]>=0.4.20",
    "numpy>=1.26.0,<2.0",
    "rdkit>=2024.3.1",
    "scipy>=1.11.0",
    "torch>=2.1.0",
    "tqdm>=4.67.1",
    # Tabasco dependencies
    "lightning>=2.0",
    "torchmetrics>=0.11",
    "hydra-core>=1.3",
    "rich>=13.0",
    "datamol>=0.12",
    "hydra-optuna-sweeper>=1.2",
    "hydra-colorlog>=1.2",
    "rootutils>=1.0",
    "biotite>=1.0,<2.0",
    "lmdb>=1.0,<2.0",
    "tensordict>=0.7.0",
    "plotly>=6.0.0",
    "wandb>=0.19.6",
    "pymol-remote>=1.1.0",
    "posebusters>=0.3.1",
    "py3Dmol>=2.4.2",
    "posecheck>=1.3.1",
    # Tabasco package (editable install from submodule)
    "tabasco",
    "huggingface-hub>=1.3.2",
    "openbabel-wheel>=3.1.1.22",
    "chemprop>=2.2.2",
]

[tool.uv.sources]
tabasco = { path = "src/tabasco", editable = true }

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "notebook>=7.5.1",
    "pre-commit>=4.0.1",
    "ruff>=0.8.6",
]
