[project]
name = "molecular-repa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tabasco",
]

[tool.uv]
# Only install dev group by default; proteina is opt-in via: uv sync --group proteina
default-groups = ["dev"]

[tool.uv.sources]
tabasco = { path = "src/tabasco", editable = true }
proteinfoundation = { path = "src/proteina", editable = true }

# PyG packages (torch-scatter, torch-sparse, torch-cluster) require torch as a
# build dependency but don't declare it — this tells uv to inject it when building.
[tool.uv.extra-build-dependencies]
torch-cluster = ["torch"]
torch-sparse = ["torch"]
torch-scatter = ["torch"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "notebook>=7.5.1",
    "pre-commit>=4.0.1",
    "pytest>=9.0.2",
    "ruff>=0.8.6",
]
proteina = [
    # Proteina package (editable install from submodule).
    # All pip deps are declared in src/proteina/setup.py install_requires.
    # NOTE: mmseqs2 is bioconda-only — install separately (conda or HPC module).
    # NOTE: PyG CUDA wheels may need --extra-index-url on HPC:
    #   https://pytorch-geometric.readthedocs.io/en/latest/notes/installation.html
    "proteinfoundation",
]
